--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18"
+    "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vue": "^2.1.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "astro": "^2.1.3",
+    "fuse.js": "^6.6.2",
+    "tailwindcss": "^3.2.7",
+    "vue": "^3.2.47"
   }
 }
